@@ -1,10 +1,9 @@
 MACRO(CHECK_INCLUDE_FILE_DEFINE HEADER VAR)
-CHECK_INCLUDE_FILE(${HEADER} HAVE_INCLUDE_FILE)
-IF(HAVE_INCLUDE_FILE)
+CHECK_INCLUDE_FILE(${HEADER} ${VAR})
+IF(${VAR})
   ADD_DEFINE("${VAR} 1")
-  SET(${VAR} 1 CACHE INTERNAL "")
-ENDIF(HAVE_INCLUDE_FILE)
-ENDMACRO(CHECK_INCLUDE_FILE_DEFINE ARG)
+ENDIF(${VAR})
+ENDMACRO(CHECK_INCLUDE_FILE_DEFINE)
 
 MACRO(CHECK_FUNCTION_DEFINE HEADERS FUNC PARAM VAR)
 CHECK_C_SOURCE_COMPILES(
@@ -17,7 +16,7 @@ ${FUNC} ${PARAM};
 IF(${VAR})
   ADD_DEFINE("${VAR} 1")
 ENDIF(${VAR})
-ENDMACRO(CHECK_FUNCTION_DEFINE HEADERS FUNC PARAM VAR)
+ENDMACRO(CHECK_FUNCTION_DEFINE HEADERS)
 
 
 IF(WIN32)
@@ -28,11 +27,11 @@ IF(WIN32)
 ELSE(WIN32)
 
   CHECK_INCLUDE_FILE_DEFINE(time.h HAVE_TIME_H)
+  CHECK_INCLUDE_FILE_DEFINE(unistd.h HAVE_UNISTD_H)
   IF(HAVE_TIME_H)
     CHECK_FUNCTION_DEFINE("#include <time.h>" nanosleep "((struct timespec*)0, (struct timespec*)0)" HAVE_NANOSLEEP)
   ELSE(HAVE_TIME_H)
 
-    CHECK_INCLUDE_FILE_DEFINE(unistd.h HAVE_UNISTD_H)
     IF(HAVE_UNISTD_H)
       CHECK_FUNCTION_DEFINE("#include <unistd.h>" usleep "(0)" HAVE_USLEEP)
     ENDIF(HAVE_UNISTD_H)
